--- a/internal/nuget-package/linq.js-bindings.nuspec
+++ b/internal/nuget-package/linq.js-bindings.nuspec
@@ -1,19 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-        <id>linq.js</id>
+        <id>linq.js-Bindings</id>
         <version>2.2.0.2</version>
-        <title>linq.js</title>
+        <title>linq.js - Bindings</title>
         <authors>neuecc</authors>
         <owners>neuecc</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>Linq to Objects for JavaScript.</description>
+        <description>linq.js binding for jQuery and RxJS.</description>
         <language>en-US</language>
         <licenseUrl>http://linqjs.codeplex.com/license</licenseUrl>
         <projectUrl>http://linqjs.codeplex.com/</projectUrl>
-        <tags>linq javascript</tags>
+        <tags>linq javascript jquery Rx RxJS</tags>
+        <dependencies>
+            <dependency id="linq.js" version="[2.2.0.2,]"></dependency>
+            <dependency id="jQuery" version="[1.3.1,]"></dependency>
+        </dependencies>
     </metadata>
     <files>
-        <file src="../../linq*.js" target="Content\Scripts" />
+        <file src="../../bindings/*.js" target="Content\Scripts" />
     </files>
 </package>
