--- a/internal/nuget-package/linq.js-jquery.nuspec
+++ b/internal/nuget-package/linq.js-jquery.nuspec
@@ -2,12 +2,12 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>linq.js-jQuery</id>
-        <version>2.2.0.1</version>
+        <version>2.2.0.2</version>
         <title>linq.js - jQuery Plugin Version</title>
         <authors>neuecc</authors>
         <owners>neuecc</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>Linq to Objects for JavaScript. This version is integrated with jQuery.</description>
+        <description>Linq to Objects for JavaScript. This version is plugin integrated with jQuery.</description>
         <language>en-US</language>
         <licenseUrl>http://linqjs.codeplex.com/license</licenseUrl>
         <projectUrl>http://linqjs.codeplex.com/</projectUrl>
