--- a/linqjs.csproj
+++ b/linqjs.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <FilesToIncludeForPublish>OnlyFilesToRunTheApp</FilesToIncludeForPublish>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -54,10 +55,15 @@
     <Content Include="bindings\RxVSDocGenerator\Mono.Cecil.dll" />
     <Content Include="bindings\RxVSDocGenerator\ReadMe_RxVSDocGenerator.txt" />
     <Content Include="bindings\RxVSDocGenerator\RxVSDocGenerator.exe" />
+    <Content Include="bindings\linq.jquery.js" />
     <Content Include="internal\lib\AjaxMin.dll" />
+    <Content Include="internal\lib\compiler.jar" />
+    <Content Include="internal\lib\Ionic.Zip.dll" />
     <Content Include="internal\lib\jquery-1.4.1-vsdoc.js" />
     <Content Include="internal\lib\jquery-1.4.1.js" />
-    <Content Include="internal\lib\jquery-1.4.1.min.js" />
+    <Content Include="internal\lib\l2o.js" />
+    <Content Include="internal\lib\rx.jQuery.js" />
+    <Content Include="internal\lib\rx.js" />
     <Content Include="internal\nuget-package\NuGet.exe" />
     <Content Include="internal\sandbox.htm" />
     <Content Include="jquery.linq-vsdoc.js" />
@@ -80,6 +86,7 @@
     <Content Include="test\functional.js" />
     <Content Include="test\grouping.js" />
     <Content Include="test\join.js" />
+    <Content Include="test\jquery-1.4.1.min.js" />
     <Content Include="test\ordering.js" />
     <Content Include="test\paging.js" />
     <Content Include="test\projection.js" />
@@ -109,6 +116,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="internal\nuget-package\package.bat" />
+    <Content Include="internal\zippack.fsx" />
+    <Content Include="internal\closure.fsx" />
+    <None Include="internal\nuget-package\linq.js-bindings.nuspec" />
     <None Include="snippets\Action0.snippet" />
     <None Include="snippets\Action1.snippet" />
     <None Include="snippets\Action2.snippet" />
