--- a/internal/nuget-package/linq.js-rxjs.nuspec
+++ b/internal/nuget-package/linq.js-rxjs.nuspec
@@ -1,23 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-        <id>linq.js-Bindings</id>
-        <version>2.2.0.2</version>
-        <title>linq.js - Bindings</title>
+        <id>linq.js-RxJS</id>
+        <version>3.0.0-beta</version>
+        <title>linq.js - RxJS Binding</title>
         <authors>neuecc</authors>
         <owners>neuecc</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>linq.js binding for jQuery and RxJS.</description>
+        <description>linq.js binding for RxJS.</description>
         <language>en-US</language>
         <licenseUrl>http://linqjs.codeplex.com/license</licenseUrl>
         <projectUrl>http://linqjs.codeplex.com/</projectUrl>
-        <tags>linq javascript jquery Rx RxJS</tags>
+        <tags>linq javascript Rx RxJS</tags>
         <dependencies>
-            <dependency id="linq.js" version="[2.2.0.2,]"></dependency>
-            <dependency id="jQuery" version="[1.3.1,]"></dependency>
+            <dependency id="linq.js" version="3.0.0-beta"></dependency>
+            <dependency id="RxJS-Main" version="2.0.20327-beta"></dependency>
         </dependencies>
     </metadata>
     <files>
-        <file src="../../bindings/*.js" target="Content\Scripts" />
+        <file src="..\..\extensions\linq.rx.js" target="Content\Scripts" />
     </files>
 </package>
