--- a/internal/nuget-package/linq.js.nuspec
+++ b/internal/nuget-package/linq.js.nuspec
@@ -2,18 +2,18 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>linq.js</id>
-        <version>2.2.0.2</version>
+        <version>3.0.0-beta</version>
         <title>linq.js</title>
         <authors>neuecc</authors>
         <owners>neuecc</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>Linq to Objects for JavaScript.</description>
+        <description>LINQ to Objects for JavaScript.</description>
         <language>en-US</language>
         <licenseUrl>http://linqjs.codeplex.com/license</licenseUrl>
         <projectUrl>http://linqjs.codeplex.com/</projectUrl>
         <tags>linq javascript</tags>
     </metadata>
     <files>
-        <file src="../../linq*.js" target="Content\Scripts" />
+        <file src="..\..\linq*.js" target="Content\Scripts" />
     </files>
 </package>
