fixed bug, Enumerable.defer define "enumerator" to global add unittest for indexOf, lastIndexOf argument allow function
--HG--
branch : v3

--- a/linqjs.csproj
+++ b/linqjs.csproj
@@ -150,6 +150,7 @@
     <Content Include="web.config" />
     <Content Include="snippets\DocumentWriteLine.snippet" />
     <Content Include="snippets\EnumerableRangeTo.snippet" />
+    <Content Include="snippets\signature.snippet" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
