--- a/internal/nuget-package/linq.js-jquery.nuspec
+++ b/internal/nuget-package/linq.js-jquery.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>linq.js-jQuery</id>
-        <version>3.0.0-beta</version>
+        <version>3.0.1-beta2</version>
         <title>linq.js - jQuery Binding</title>
         <authors>neuecc</authors>
         <owners>neuecc</owners>
@@ -13,7 +13,7 @@
         <projectUrl>http://linqjs.codeplex.com/</projectUrl>
         <tags>linq javascript jquery</tags>
         <dependencies>
-            <dependency id="linq.js" version="3.0.0-beta"></dependency>
+            <dependency id="linq.js" version="3.0.1-beta2"></dependency>
             <dependency id="jQuery" version="[1.3.1,]"></dependency>
         </dependencies>
     </metadata>
