--- a/internal/nuget-package/linq.js.nuspec
+++ b/internal/nuget-package/linq.js.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>linq.js</id>
-        <version>3.0.1-beta2</version>
+        <version>3.0.2-rc</version>
         <title>linq.js</title>
         <authors>neuecc</authors>
         <owners>neuecc</owners>
