--- a/internal/nuget-package/linq.js-jquery.nuspec
+++ b/internal/nuget-package/linq.js-jquery.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>linq.js-jQuery</id>
-        <version>3.0.2-rc</version>
+        <version>3.0.3-beta4</version>
         <title>linq.js - jQuery Binding</title>
         <authors>neuecc</authors>
         <owners>neuecc</owners>
@@ -11,13 +11,14 @@
         <language>en-US</language>
         <licenseUrl>http://linqjs.codeplex.com/license</licenseUrl>
         <projectUrl>http://linqjs.codeplex.com/</projectUrl>
-        <tags>linq javascript jquery</tags>
+        <tags>linq javascript jquery typescript</tags>
         <dependencies>
-            <dependency id="linq.js" version="3.0.2-rc"></dependency>
+            <dependency id="linq.js" version="3.0.3-beta4"></dependency>
             <dependency id="jQuery" version="[1.3.1,]"></dependency>
         </dependencies>
     </metadata>
     <files>
         <file src="..\..\extensions\linq.jquery.js" target="Content\Scripts" />
+        <file src="..\..\typescript\linq.jquery.d.ts" target="Content\Scripts" />
     </files>
 </package>
