--- a/internal/nuget-package/linq.js-qunit.nuspec
+++ b/internal/nuget-package/linq.js-qunit.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>linq.js-QUnit</id>
-        <version>3.0.2-rc</version>
+        <version>3.0.3-beta4</version>
         <title>linq.js - QUnit Binding</title>
         <authors>neuecc</authors>
         <owners>neuecc</owners>
@@ -13,7 +13,7 @@
         <projectUrl>http://linqjs.codeplex.com/</projectUrl>
         <tags>linq javascript qunit test</tags>
         <dependencies>
-            <dependency id="linq.js" version="3.0.2-rc"></dependency>
+            <dependency id="linq.js" version="3.0.3-beta4"></dependency>
             <dependency id="QUnit-MVC" version="[1.6.2.0,]"></dependency>
         </dependencies>
     </metadata>
